[package]
name = "rapid-gossip-sync-server"
version = "0.1.0"
edition = "2018"

[dependencies]
bitcoin = "0.29"
lightning = { path = "../rust-lightning/lightning" }
lightning-block-sync = { path = "../rust-lightning/lightning-block-sync", features=["rest-client"] }
lightning-net-tokio = { path = "../rust-lightning/lightning-net-tokio" }
tokio = { version = "1.14.1", features = ["full"] }
tokio-postgres = { version="=0.7.5" }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
